[package]
name = "kbd-toggle"
version = "0.1.0"
authors = ["Bjørn Snoen <bjorn.snoen@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = { git="https://github.com/bjornsnoen/x11-rs", features = ["xlib"] }
libc = "0.2.21"